task list leaking on mobile fixed

--- a/src/styles/KanBan.module.css
+++ b/src/styles/KanBan.module.css
@@ -3,12 +3,10 @@
   min-height: 33vh;
   height: 100%;
 
-  padding-top: 3rem;
-  margin: 3rem;
+  padding: 3rem;
 
   display: flex;
   flex-direction: row;
-  justify-content: center;
 
   gap: 25px;
 }
